# harlite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  schema.sql
docs/: plugin-developer-guide.md
plugins/: sample_exporter.py  sample_filter.py
src/: api.rs  cli.rs  config.rs  error.rs  graphql.rs  lib.rs  main.rs  plugins.rs  prelude.rs  router.rs  size.rs
src/commands/: analyze.rs  cdp.rs  diff.rs  entry_filter.rs  export.rs  export_data.rs  fts.rs  import.rs  imports.rs  info.rs  merge.rs  mod.rs  openapi.rs  otel.rs  pii.rs  prune.rs  query.rs  redact.rs  repl.rs  replay.rs  report.rs  schema.rs  search.rs  serve.rs  stats.rs  util.rs  watch.rs  waterfall.rs
src/db/: mod.rs  reader.rs  schema.rs  writer.rs
src/har/: parser.rs
tests/: integration.rs
tests/fixtures/: duplicate_bodies.har  gzip_response.har  out_of_order.har  redact.har  simple.har  simple.har.br  simple_changed.har  with_pages.har
