[package]
name = "harlite"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "Import HAR files into SQLite. Query your web traffic with SQL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/brucehart/harlite"
homepage = "https://github.com/brucehart/harlite"
keywords = ["har", "http", "sqlite", "web", "debugging"]
categories = ["command-line-utilities", "web-programming"]
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
blake3 = "1"
indicatif = "0.17"
base64 = "0.22"
regex = "1"
flate2 = "1"
brotli = "3"
ctrlc = "3"
tungstenite = "0.21"
ureq = { version = "2", features = ["json"] }
rustyline = "14"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
