[package]
name = "harlite"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
description = "Import HAR files into SQLite. Query your web traffic with SQL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/brucehart/harlite"
homepage = "https://github.com/brucehart/harlite"
keywords = ["har", "http", "sqlite", "web", "debugging"]
categories = ["command-line-utilities", "web-programming"]
include = [
    "src/**",
    "plugins/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
blake3 = "1"
indicatif = "0.17"
base64 = "0.22"
bytes = "1"
regex = "1"
graphql-parser = "0.4"
flate2 = "1"
brotli = "3"
ctrlc = "3"
notify = "6"
tungstenite = "0.21"
ureq = { version = "2", features = ["json"] }
rustyline = "14"
parquet = { version = "57.2.0", optional = true }
opentelemetry-proto = { version = "0.6", features = ["gen-tonic", "trace"] }
prost = "0.12"
tonic = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

[features]
default = []
parquet = ["dep:parquet"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
