[package]
name = "harlite"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
description = "Import HAR files into SQLite. Query your web traffic with SQL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/brucehart/harlite"
homepage = "https://github.com/brucehart/harlite"
keywords = ["har", "http", "sqlite", "web", "debugging"]
categories = ["command-line-utilities", "web-programming"]
include = [
    "src/**",
    "plugins/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
blake3 = "1"
indicatif = "0.17"
base64 = "0.22"
bytes = "1"
regex = "1"
graphql-parser = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
brotli = { version = "3", optional = true }
ctrlc = { version = "3", optional = true }
notify = { version = "6", optional = true }
tungstenite = { version = "0.21", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
rustyline = { version = "14", optional = true }
parquet = { version = "57.2.0", optional = true }
opentelemetry-proto = { version = "0.6", features = ["gen-tonic", "trace"], optional = true }
prost = { version = "0.12", optional = true }
tonic = { version = "0.11", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[features]
default = ["full"]
full = [
    "cdp",
    "compression",
    "completions",
    "graphql",
    "otel",
    "repl",
    "replay",
    "serve",
    "watch",
]
cdp = ["dep:ctrlc", "dep:tungstenite", "dep:ureq"]
compression = ["dep:brotli", "dep:flate2"]
completions = ["dep:clap_complete"]
graphql = ["dep:graphql-parser"]
otel = ["dep:opentelemetry-proto", "dep:prost", "dep:tokio", "dep:tonic", "dep:ureq"]
repl = ["dep:rustyline"]
replay = ["dep:ureq"]
serve = ["dep:ctrlc", "dep:hyper", "dep:rustls", "dep:rustls-pemfile", "dep:tokio", "dep:tokio-rustls"]
watch = ["dep:ctrlc", "dep:notify"]
parquet = ["dep:parquet"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
